--- a/css/colores.css
+++ b/css/colores.css
@@ -22,17 +22,66 @@ header {
   height: 80px;
   width: 100%;
   margin: auto; /* messive para centrar un elementoque no ocupe el 100% del espacio */
+  padding: 0 10%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
+/* tamaños de texto principal */
 header .mark {
-  background-color: rgb(11, 83, 59);
-  color: aliceblue;
-  padding: 10px;
   font-size: 20pt;
 }
+/* tamaños de los logos */
 header .social {
+  font-size: 24pt;
 }
+/* separacion de los logos */
+.social a {
+  margin: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+.social a:hover {
+  color: aqua;
+  text-shadow: 0 0 6px rgb(180, 27, 27);
+}
+
+.card {
+  position: relative;
+  height: 400px;
+  width: 30%;
+  background-color: blanchedalmond;
+  padding: 20px;
+  border-radius: 15px;
+}
+
+.card .img {
+  width: 100%;
+  height: 50%;
+  background-color: black;
+  margin-bottom: 10px;
+}
+
+.card .titulo {
+  font-size: 18;
+}
+.card .boton {
+  position: absolute;
+  background-color: darkgray;
+  padding: 10px 30px;
+  color: white;
+  text-decoration: none;
+  font-size: 12pt;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 30px;
+}
+.card .boton:hover {
+  background-color: aqua;
+  box-shadow: 0 0 6px rgb(180, 27, 27);
+}
+
 footer {
   height: 60px;
   width: 100%;
@@ -42,7 +91,8 @@ footer {
 }
 .contenido {
   height: 800px;
-  width: 100%;
+  width: 80%;
+  margin: auto;
   background-color: #0093e9;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
   margin-bottom: 20px;
