--- a/css/colores.css
+++ b/css/colores.css
@@ -46,11 +46,16 @@ header .social {
   color: aqua;
   text-shadow: 0 0 6px rgb(180, 27, 27);
 }
+.contenedor-tarjeta{
+   display: flex ; /* */
+   gap: 20px;
+}
 
 .card {
   position: relative;
   height: 400px;
-  width: 30%;
+  /* width: 30px; */
+  flex: 1 0 100px;
   background-color: blanchedalmond;
   padding: 20px;
   border-radius: 15px;
@@ -91,7 +96,7 @@ footer {
 }
 .contenido {
   height: 800px;
-  width: 80%;
+  width: 100%;
   margin: auto;
   background-color: #0093e9;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
