--- a/css/colores.css
+++ b/css/colores.css
@@ -53,9 +53,9 @@ header .social {
 
 .card {
   position: relative;
-  height: 400px;
+  height: 500px;
   /* width: 30px; */
-  flex: 1 0 100px;
+  flex: 1 0 300px;
   background-color: blanchedalmond;
   padding: 20px;
   border-radius: 15px;
@@ -96,8 +96,9 @@ footer {
 }
 .contenido {
   height: 800px;
-  width: 100%;
+  width: 81%;
   margin: auto;
+  padding: 50px;
   background-color: #0093e9;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
   margin-bottom: 20px;
