--- a/css/colores.css
+++ b/css/colores.css
@@ -99,7 +99,7 @@ footer {
   width: 81%;
   margin: auto;
   padding: 50px;
-  background-color: #0093e9;
+  background-color: #1a96dd;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
   margin-bottom: 20px;
 }
