--- a/css/colores.css
+++ b/css/colores.css
@@ -90,16 +90,18 @@ header .social {
 footer {
   height: 60px;
   width: 100%;
-  background-color: darkgray;
+  background-color:rgba(0, 0, 0, 0.473);
   position: fixed;
   bottom: 0;
+  line-height: 60px;
 }
 .contenido {
   height: 800px;
   width: 81%;
   margin: auto;
-  padding: 50px;
   background-color: #1a96dd;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
   margin-bottom: 20px;
 }
+
+/* display:none; es para eliminar lo que contiene adentro de la clase  */
