--- a/trabajos_practicos/css/tp2.css
+++ b/trabajos_practicos/css/tp2.css
@@ -1,20 +1,95 @@
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300&family=Roboto:wght@100;400;700&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.kanit {
-    font-family: "Kanit", sans-serif;
-  }
-  
-  .roboto {
-    font-family: "Roboto Condensed", sans-serif;
-  }
-  
-  .fw200 {
-    font-weight: 200;
-  }
+/*TIPOGRAFIAS*/
+.lato {
+    font-family: 'Lato', sans-serif;
+    font-style: italic;
+}
+.roboto {
+    font-family: 'Roboto', sans-serif;
+}
+.fw100 {
+    font-weight: 100;
+}
+.fw300 {
+    font-weight: 300;
+}
+.fw700 {
+    font-weight: 700;
+}
+/* estilos para imagenes de fondo */
+.bnrep{
+   background-repeat: no-repeat; /*para que la imagen no se repita si hay espacio sobrante */
+   background-size: cover; /*que la imagen ocupe al 100% */
+  background-position: center; /*centrar imagen*/
+}
+
+/*-----estilos del proyecto-------*/
+
+.portada {
+    position: relative;
+    background-image: url(../img/res.jpg); 
+    background-color: aquamarine;
+     padding: 7%; 
+    color: white;
+     box-shadow: inset 0 0 150px rgb(0, 0, 0); /*sombra para caja */
+    height: 300px;
+}
+
+.busqueda{
+  position: absolute;
+  bottom: -17px;
+  background-color: aqua;
+  width: 86%;
+  height: 60px;
+   margin: auto; /*centrar la caja de manera horizontal */
+  box-shadow: 0 15px 20px -15px rgb(0, 0, 0);  /*1: eje x ||2: eje y ||3: cantidad de difuminado || 4: color de la sombra  */
+  display: flex;
+  align-items: center;
+   justify-content: space-between; /* espacio identico entre los tres elementos */
+}
+
+.busqueda .icono{
+  background-color: darkgray;
+  height: 100%; 
+  width: 60px; 
+  text-align: center;  /*cetrar texto/iconogoogle */
+  line-height: 60px; /*centrar verticalmente texto*/
+
+}
+
+.icono.material-icons-outlined
+{
+  font-size: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*------------FIN PORTADA-----------*/
+.menu {
+    background-color: rgb(28, 234, 165);
+    padding: 20px;
+}
+/*----------FIN MENU---------*/
+
+.productos {
+    background-color: rgb(70, 70, 70);
+    padding: 20px;
+}
+/*-----------FIN PRODUCTOS-----------*/
