--- a/trabajos_practicos/css/tp2.css
+++ b/trabajos_practicos/css/tp2.css
@@ -89,13 +89,15 @@
   font-size: 12pt;
 }
 
-.busqueda input[type="submit"]:focus /*focus es cuado clike*/ {
-
+.busqueda input[type="submit"]:active /*active es cuado clike*/ {
   font-size: 15pt;
-  transition: all 0.3s ease;
-
+  /* transition: all 0.3s ease; */
 }
 
+.busqueda input[type="search"]:focus /*focus es cuado clike*/ {
+  font-size: 14pt;
+  /* transition: all 0.3s ease; */
+}
 
 
 
