--- a/trabajos_practicos/css/tp2.css
+++ b/trabajos_practicos/css/tp2.css
@@ -6,6 +6,33 @@
     box-sizing: border-box;
 }
 
+/*CONTENEDOR SCROLLBAR*/
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+  border-radius: 5px;
+}
+
+/* FONDO BARRA SCROLL*/
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* SELECTOR */
+::-webkit-scrollbar-thumb {
+  background: rgb(109, 223, 185);
+  ;
+  border-radius: 5px;
+}
+
+/* SELECTOR hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(84, 171, 142);
+  ;
+}
+
+
+
 /*TIPOGRAFIAS*/
 .lato {
     font-family: 'Lato', sans-serif;
@@ -96,7 +123,7 @@
 
 .busqueda input[type="submit"]:active /*active es cuado clike*/ {
   font-size: 15pt;
-  /* transition: all 0.3s ease; */
+  transition: all 0.3s ease; 
 }
 
 .busqueda input[type="search"]:focus /*focus es cuado clike*/ {
@@ -114,9 +141,40 @@
 
 /*------------FIN PORTADA-----------*/
 .menu {
+  margin-top: 26px;
     background-color: rgb(28, 234, 165);
     padding: 20px;
+
+
 }
+.menu ul {
+  display: flex;
+  justify-content: flex-start;
+  overflow-x: scroll; 
+}
+
+
+
+.menu ul li{
+  flex:0 0 100px;
+  text-align: center;
+  list-style: none;
+}
+
+.menu ul li a{
+  color: rgb(95, 94, 94);
+  font-family: roboto,Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  /* font-size: 18px; */
+}
+.menu ul li a:hover{
+  color: rgb(95, 94, 94);
+  font-family: roboto,Arial, Helvetica, sans-serif;
+  text-decoration: none;
+   font-size: 18px;
+   transition: all 0.3s ease; 
+}
+
 /*----------FIN MENU---------*/
 
 .productos {
