--- a/trabajos_practicos/css/tp2.css
+++ b/trabajos_practicos/css/tp2.css
@@ -20,7 +20,7 @@
 
 /* SELECTOR */
 ::-webkit-scrollbar-thumb {
-  background: rgb(109, 223, 185);
+  background: rgb(95, 94, 94);
   ;
   border-radius: 5px;
 }
@@ -156,6 +156,7 @@
 
 
 .menu ul li{
+  height: 60px;
   flex:0 0 100px;
   text-align: center;
   list-style: none;
@@ -180,5 +181,34 @@
 .productos {
     background-color: rgb(70, 70, 70);
     padding: 20px;
+}
+
+.restos{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: aqua;
+  align-items: center;
+  padding: 10px;
+}
+.card {
+  display: flex;
+  flex: 1 0 160px;
+  width: 90%;
+  background-color: brown;
+
+}
+
+
+.card .img
+{
+  flex:0 0 40%;
+  background-color: rgb(45, 224, 21);
+}
+
+.card .datosresto
+{
+  flex:0 0 60%;
+  background-color: rgb(21, 41, 224);
 }
 /*-----------FIN PRODUCTOS-----------*/
